# write-a-programming-language-in-1000-lines

./: CMakeLists.txt  LICENSE  README.md  xmake.lua
doc/: HowToContributeForIt.md  HowToReadIt.md  HowToUseIt.md
docs/: HowToAskQuestion.md  HowToReadIt.md
examples/: onestop.kiz  test.kiz
include/: ast.hpp  ir_gen.hpp  kiz.hpp  lexer.hpp  models.hpp  opcode.hpp  parser.hpp  project_debugger.hpp  std_module_init_table.hpp  version.hpp.in  vm.hpp
include/models/: bool_obj.hpp  dict_obj.hpp  int_obj.hpp  list_obj.hpp  rational_obj.hpp
include/repl/: color.hpp  repl.hpp
include/ui/: color.hpp  repl.hpp
include/util/: error_reporter.hpp  src_manager.hpp
libs/builtins/: builtins.hpp
libs/builtins/builtin_functions/: builtin_functions.hpp
libs/builtins/builtin_methods/: builtin_methods.hpp  int_obj.hpp  list_obj.hpp  nil_obj.hpp  rational_obj.hpp  str_obj.hpp
libs/math/: kiz_math.hpp
src/: ir_gen.cpp  lexer.cpp  main.cpp  parse_expr  parse_expr.cpp  parser.cpp  vm.cpp
src/ir_gen/: gen_expr.cpp  gen_stmt.cpp  ir_gen.cpp
src/lexer/: lexer.cpp
src/models/: bool_obj.cpp  dict_obj.cpp  int_obj.cpp  list_obj.cpp  nil_obj.cpp  rational_obj.cpp  str_obj.cpp
src/parser/: parse_expr.cpp  parse_stmt.cpp  parser.cpp
src/repl/: repl.cpp
src/src/models/: int_obj.cpp
src/ui/: cmd_help.txt  repl.cpp
src/util/: error_reporter.cpp  src_manager.cpp
src/vm/: exec_calc.cpp  exec_call.cpp  exec_get_set.cpp  exec_misc.cpp  registering_magic_methods.cpp  registering_std_modules.cpp  vm.cpp
